--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,25 +14,25 @@
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.commuteindy.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="My Rides"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.commuteindy.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="Find Rides"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_tools"
         android:name="com.example.commuteindy.ui.tools.ToolsFragment"
-        android:label="@string/menu_tools"
+        android:label="Give Rides"
         tools:layout="@layout/fragment_tools" />
 
     <fragment
         android:id="@+id/nav_share"
         android:name="com.example.commuteindy.ui.share.ShareFragment"
-        android:label="@string/menu_share"
+        android:label="Settings"
         tools:layout="@layout/fragment_share" />
 
     <fragment
